--- a/00_translation/app/templates/main/index.html
+++ b/00_translation/app/templates/main/index.html
@@ -1,40 +1,11 @@
-{% extends 'bootstrap/base.html' %} 
-{% import 'bootstrap/wtf.html' as wtf %}
-{% block title %} 
-{% if title %}
-{{ title }}
-{% endif %} 
-{% endblock %} 
-{% block navbar %}
-    <nav class="navbar navbar-default">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
-                    aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="https://home.yzhub.cn">{{ _('Home') }}</a>
-            </div>
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                        <li><a href="https://translator.yzhub.cn">{{ _('Translator') }}</a></li>
-                        <li><a href="https://go.yzhub.cn">{{ _('Elevator') }}</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <hr>
-{% endblock %}
-<hr>
-{% block content %}
-<div class="container">
+{% extends "main/base.html" %}
 
+{% import 'bootstrap/wtf.html' as wtf %}
+
+{% block app_content %}
     <div class="panel panel-primary">
         <div class="panel-body">
-         {{ _('Homework Simple Translation Program For Compiling principle') }}
+         {{ _('Simple Translation Program For Compiling Principle homework') }}
         </div>
         <div class="panel-footer">
             
@@ -54,7 +25,7 @@
     </div>
         <div class="panel panel-primary">
             <div class="panel-body">
-                 {{ _('Homework Simple Translation Program For Compiling principle') }}
+                 {{ _('Simple Translation Program For Compiling Principle homework') }}
             </div>
             <div class="panel-footer">
         
@@ -73,22 +44,9 @@
             </div>
         </div>
 
-    
-
-        
-        
-
-        {% with messages = get_flashed_messages() %} 
-            {% if messages %} 
-            {% for message in messages %}
-            <div class="alert alert-info" role="alert">{{ message }}</div>
-            {% endfor %} 
-            {% endif %} 
-        {% endwith %} 
-        {% block app_content %}{% endblock %}
-</div>
 {% endblock %}
 {% block scripts %}
+{{ super() }}
 <script>
     function translate(sourceElem, destElem, sourceLang, destLang) {
         $(destElem).html('<img src="{{ url_for('static', filename='loading.gif') }}">');
@@ -103,6 +61,4 @@
         });
     }
 </script> 
-{{ super() }} 
-
 {% endblock %}
