--- a/03_Priority-analysis-table-and-function/app/templates/main/index.html
+++ b/03_Priority-analysis-table-and-function/app/templates/main/index.html
@@ -11,7 +11,17 @@
             
         <textarea id="post{{ res }}" type="text"  rows="6" class="form-control" aria-label="..."></textarea>
         <br>
-        <div id="parse{{ res }}" class="well well-sm">Parser Result</div>
+        <div id="parse{{ res }}" class="well well-sm">
+            <h4>Examples Input:</h4>
+            <p>E->E+T</p>
+            <p>E->T</p>
+            <p>T->F</p>
+            <p>T->T*F</p>
+            <p>F->P</p>
+            <p>F->P^F</p>
+            <p>P->(E)</p>
+            <p>P->i</p>
+        </div>
         <br>
         <span >
         
