--- a/01_lexer-and-parser/app/templates/main/index.html
+++ b/01_lexer-and-parser/app/templates/main/index.html
@@ -11,7 +11,13 @@
             
         <textarea id="post{{ res }}" type="text"  rows="6" class="form-control" aria-label="..."></textarea>
         <br>
-        <div id="parse{{ res }}" class="well well-sm">Parser Result</div>
+        <div id="parse{{ res }}" class="well well-sm">
+            <h4>Examples Input:</h4>
+            <p>if x = 1 then</p>
+            <p> y = 2</p>
+            <p>else</p>
+            <p> y = 3.5</p>
+            <p>end</p>
         <br>
         <span >
         
