--- a/02_Recursive-decline-method/app/templates/main/index.html
+++ b/02_Recursive-decline-method/app/templates/main/index.html
@@ -11,7 +11,10 @@
             
         <textarea id="post{{ res }}" type="text"  rows="6" class="form-control" aria-label="..."></textarea>
         <br>
-        <div id="parse{{ res }}" class="well well-sm">Parser Result</div>
+        <div id="parse{{ res }}" class="well well-sm">
+            <h4>Examples Input:</h4>
+            <p>2+(3+4)*5</p>
+        </div>
         <br>
         <span >
         
