--- a/00_translation/app/templates/main/base.html
+++ b/00_translation/app/templates/main/base.html
@@ -16,16 +16,16 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="https://home.yzhub.cn">{{ _('Home') }}</a>
+                <a class="navbar-brand" href="https://home.iplace.ga">{{ _('Home') }}</a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                        <li><a href="https://translator.yzhub.cn">{{ _('Translator') }}</a></li>
-                        <li><a href="https://go.yzhub.cn">{{ _('Elevator') }}</a></li>
-                        <li><a href="https://parser.yzhub.cn">{{ _('Parser') }}</a></li>
-                        <li><a href="https://rdp.yzhub.cn">{{ _('Recursive descent') }}</a></li>
-                        <li><a href="https://pa.yzhub.cn">{{ _('Priority analysis') }}</a></li>
-                        <li><a href="https://sdt.yzhub.cn">{{ _('SDT') }}</a></li>
+                        <li><a href="https://translator.iplace.ga">{{ _('Translator') }}</a></li>
+                        <li><a href="https://go.iplace.ga">{{ _('Elevator') }}</a></li>
+                        <li><a href="https://parser.iplace.ga">{{ _('Parser') }}</a></li>
+                        <li><a href="https://rdp.iplace.ga">{{ _('Recursive descent') }}</a></li>
+                        <li><a href="https://pa.iplace.ga">{{ _('Priority analysis') }}</a></li>
+                        <li><a href="https://sdt.iplace.ga">{{ _('SDT') }}</a></li>
                 </ul>
             </div>
         </div>
