--- a/00_elevator/templates/base.html
+++ b/00_elevator/templates/base.html
@@ -27,7 +27,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                         <li><a href="https://translator.iplace.cn">{{ _('Translator') }}</a></li>
-                        <li><a href="https://go.iplace.cn">{{ _('Elevator') }}</a></li>
+                        <li><a href="https://elevator.iplace.cn">{{ _('Elevator') }}</a></li>
                         <li><a href="https://parser.iplace.cn">{{ _('Parser') }}</a></li>
                         <li><a href="https://rdp.iplace.cn">{{ _('Recursive descent') }}</a></li>
                         <li><a href="https://pa.iplace.cn">{{ _('Priority analysis') }}</a></li>
