--- a/04_Syntax-directed-translation/app/templates/main/base.html
+++ b/04_Syntax-directed-translation/app/templates/main/base.html
@@ -21,7 +21,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                         <li><a href="https://translator.iplace.ga">{{ _('Translator') }}</a></li>
-                        <li><a href="https://go.iplace.ga">{{ _('Elevator') }}</a></li>
+                        <li><a href="https://elevator.iplace.ga">{{ _('Elevator') }}</a></li>
                         <li><a href="https://parser.iplace.ga">{{ _('Parser') }}</a></li>
                         <li><a href="https://rdp.iplace.ga">{{ _('Recursive descent') }}</a></li>
                         <li><a href="https://pa.iplace.ga">{{ _('Priority analysis') }}</a></li>
